[package]
name = "use-ach"
description = "Conservative ACH and NACHA-oriented primitives for RustUse finance crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-ach"
keywords = ["ach", "nacha", "bank", "finance", "rustuse"]
categories = ["data-structures"]

[dependencies]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
