[package]
name = "use-bai2"
description = "Initial BAI2 banking file primitives for RustUse finance crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-bai2"
keywords = ["bai2", "bank", "finance", "parser", "rustuse"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
use-amount.workspace = true
use-transaction.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
