[package]
name = "use-bic"
description = "Bank Identifier Code primitives for RustUse finance crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-bic"
keywords = ["bic", "swift", "bank", "finance", "rustuse"]
categories = ["data-structures"]

[dependencies]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
