[package]
name = "use-iban"
description = "IBAN validation and formatting primitives for RustUse finance crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-iban"
keywords = ["iban", "bank", "finance", "validation", "rustuse"]
categories = ["data-structures"]

[dependencies]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
