[package]
name = "use-ledger"
description = "Basic ledger and accounting primitives for RustUse finance crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-ledger"
keywords = ["ledger", "accounting", "debit", "credit", "rustuse"]
categories = ["data-structures"]

[dependencies]
use-money.workspace = true

[dev-dependencies]
use-amount.workspace = true
use-currency.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
