[package]
name = "use-money"
description = "Money primitives pairing amounts and currencies for RustUse finance crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-money"
keywords = ["money", "currency", "amount", "finance", "rustuse"]
categories = ["data-structures"]

[dependencies]
use-amount.workspace = true
use-currency.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
