[package]
name = "use-routing-number"
description = "ABA routing number validation primitives for RustUse finance crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-routing-number"
keywords = ["routing", "aba", "bank", "finance", "rustuse"]
categories = ["data-structures", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
